--- a/page_styles.css
+++ b/page_styles.css
@@ -58,3 +58,53 @@
   font-stretch: normal;
   src: url(fonts/Arial-Italic.ttf);
 }
+
+
+@font-face {
+  font-family: 'Fira Code';
+  src: url('fonts/FiraCode-Light.fonts') format('fonts'),
+    url("woff/FiraCode-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  src: url('fonts/FiraCode-Regular.fonts') format('fonts'),
+    url("woff/FiraCode-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  src: url('fonts/FiraCode-Medium.fonts') format('fonts'),
+    url("woff/FiraCode-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  src: url('fonts/FiraCode-SemiBold.fonts') format('fonts'),
+    url("woff/FiraCode-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  src: url('fonts/FiraCode-Bold.fonts') format('fonts'),
+    url("woff/FiraCode-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Fira Code VF';
+  src: url('fonts/FiraCode-VF.fonts') format('fonts-variations'),
+       url('woff/FiraCode-VF.woff') format('woff-variations');
+  /* font-weight requires a range: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Fonts/Variable_Fonts_Guide#Using_a_variable_font_font-face_changes */
+  font-weight: 300 700;
+  font-style: normal;
+}
